<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">l-Slider</string>
    <string name="action_settings">About LearnOn</string>
    <string name="hello_world">Hello world!</string>
    <string name="number_game">Play Number Game</string>
    <string name="alpha_game">Play Alphabet Game</string>
    <string name="how_to_play">How to play</string>
    <string name="quit">Quit</string>
    <string name="title_activity_number_game">Number Game</string>
    <string name="title_activity_number_game_popup">Select Options</string>
    <string name="title_activity_ad">Ad Activity</string>
    <string name="title_activity_alpha_game">Alphabet Game</string>
    <string name="title_activity_help">Help</string>
    <string name="go_to_main">Go To Main</string>
    <string name="play_game">Play Game</string>
    <string name="numbergame">Numbers</string>
    <string name="alphabetgame">Alphabets</string>
    <string name="number9">3 x 3</string>
    <string name="number16">4 x 4</string>
    <string name="number25">5 x 5</string>
    <string name="alphasmall">small</string>
    <string name="alphacapital">CAPITAL  </string>
    <string name="alphamix">mIxED</string>
    <string name="strict">Challenging</string>
    <string name="freeflowing">Easy</string>
    <string name="startgame">Let\'s Play</string>
    <string name="title_activity_play_game">Select Option and Play</string>
    <string name="title_activity_about">LearnOn Solutions</string>
    <string name="title_activity_high_score">Scores:</string>
    <string name="view_score">View Score</string>
    <string name="developers">\t\tDevelopers:\n\t\t\tAditya Trivedi \n\t\t\tDushyant Trivedi</string>
    <string name="version">\t\tVersion: 0.23.07</string>
    <string name="aboutAddress">Mumbai, India</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="comapny_logo">Comapny Logo</string>
</resources>
