<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myapp="http://schemas.android.com/apk/res/com.learnon.games.tiling.slider"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000000"/>
    
    <Button
        android:id="@+id/playGame"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:textColor="#000000"
	    android:gravity="center_vertical|center_horizontal|center"
        android:onClick="ButtonOnClick"
        android:background="@drawable/custombutton"
        android:text="@string/play_game" />
    
     <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000000"/>
        
    <Button
        android:id="@+id/highScore"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_gravity="center_horizontal"
	    android:textColor="#000000"
        android:background="@drawable/custombutton"
        android:onClick="ButtonOnClick"
        android:text="@string/view_score" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000000"/>
        
    <Button
        android:id="@+id/howToPlay"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_gravity="center_horizontal"
	    android:textColor="#000000"
        android:background="@drawable/custombutton"
        android:onClick="ButtonOnClick"
        android:text="@string/how_to_play" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000000"/>
        
    <Button
        android:id="@+id/quit"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_gravity="center_horizontal"
	    android:textColor="#000000"
        android:background="@drawable/custombutton"
        android:onClick="ButtonOnClick"
        android:text="@string/quit" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textColor="#000000"/>
    
   <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
		myapp:backgroundColor="#000000" 
		myapp:primaryTextColor="#FFFFFF" 
		myapp:secondaryTextColor="#CCCCCC"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.ads.AdView>
	
</LinearLayout>